# Xpotify-downloader

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
app/: __init__.py
app/backend/: __init__.py  main.py
app/backend/api/: deps.py  routes_downloads.py  routes_health.py  routes_settings.py
app/backend/models/: __init__.py  download_job.py  download_result.py  settings.py
app/backend/providers/: __init__.py  base.py  direct_media_provider.py  spotdl_provider.py  video_provider.py
app/backend/services/: download_manager.py  file_manager.py  job_queue.py  metadata_service.py
app/backend/utils/: filenames.py  logging.py  validation.py
app/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/frontend/src/: App.tsx  main.tsx
app/frontend/src/components/: CapabilityMatrix.tsx  JobCard.tsx  Shell.tsx
app/frontend/src/lib/: api.ts  links.ts  types.ts
app/frontend/src/pages/: AboutPage.tsx  DownloadPage.tsx  LibraryPage.tsx  QueuePage.tsx  SettingsPage.tsx
app/frontend/src/styles/: index.css
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LEGAL_AND_USAGE.md  PROJECT_AUDIT.md  archive-notes.md  index.md
spotdl/utils/: metadata.py  spotify.py
tests/app_backend/: __init__.py  test_download_manager.py  test_filenames.py  test_health_api.py  test_provider_routing.py  test_settings.py  test_spotdl_provider.py
